# MedicalMayhem

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  README.md  build.ninja  my.rc
.github/workflows/: build-prod.yml  build-release.yml  build-staging.yml
github/workflows/: build-release.yml  build-staging.yml
src/: config.h  config.h.in  main.c
src/utils/cmdUtil/: cmdUtil.c  cmdUtil.h
src/utils/cmdUtil/menus/doctorMenu/: doctorMenu.c  doctorMenu.h
src/utils/cmdUtil/menus/mainMenu/: mainMenu.c  mainMenu.h
src/utils/cmdUtil/menus/managmentMenu/: managmentMenu.c  managmentMenu.h
src/utils/cmdUtil/menus/patientMenu/: patientMenu.c  patientMenu.h
src/utils/cmdUtil/menus/scheduleMenu/: scheduleMenu.c  scheduleMenu.h
src/utils/doctorUtil/: doctorScheduleUtil.c  doctorScheduleUtil.h  doctorUtil.c  doctorUtil.h
src/utils/llistUtil/: llist.c  llist.h
src/utils/patientUtil/: patientUtil.c  patientUtil.h
src/utils/reportUtil/: reportUtil.c  reportUtil.h
src/utils/saveUtil/: backupUtil.c  backupUtil.h  saveUtil.c  saveUtil.h
tests/: cmdTest.c  doctorTest.c  saveTest.c  testTemplate.c
